# POGGERS-Rewrite

./: LICENSE.md  README.md  ban-kick.py  keep_alive.py  main.py  pyproject.toml  requirements.txt
cogs/: base.py  fun.py  marioparty.py  toontown.py
mpiq/: Q1.txt  Q10.txt  Q100.txt  Q101.txt  Q102.txt  Q11.txt  Q12.txt  Q13.txt  Q14.txt  Q15.txt  Q16.txt  Q17.txt  Q18.txt  Q19.txt  Q2.txt  Q20.txt  Q21.txt  Q22.txt  Q23.txt  Q24.txt  Q25.txt  Q26.txt  Q27.txt  Q28.txt  Q29.txt  Q3.txt  Q30.txt  Q31.txt  Q32.txt  Q33.txt  Q34.txt  Q35.txt  Q36.txt  Q37.txt  Q38.txt  Q39.txt  Q4.txt  Q40.txt  Q41.txt  Q42.txt  (+61 more)
util/: wheel.py
